Make Localizer no longer Restartable
- The Localizer class is no longer a(n) (i)Restartable class. Restarting it is taken care of by the LocalizationGenerator class now (when needed). Taking away the IRestartable interface from this class ensures classes outside the localization package can interact with stuff they should leave alone.
- Reduced scope of some ctors/methods in localization package to avoid it being used externally.